--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <title>M1 Portafolio</title>
   </head>
   <body>
-    <h1> Mi nombre es: Juan Heredia </h1>
+    <h1> Mi nombre es: Juan Andres Heredia </h1>
   </body>
 </html>
